objects/SummaryReportLine__c.object
<CustomObject>
    <description>https://imcdgroup.atlassian.net/browse/SFDP-1972</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account, this is only relevant for Principal Summary reports.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>Summary_Report_LInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpReportCreatedDate__c</fullName>
        <formula>FollowupReport__r.CreatedDate</formula>
        <label>Follow Up Report Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUpReportProduct__c</fullName>
        <formula>FollowupReport__r.ProductDisplayName__c</formula>
        <label>Follow Up Report Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowUpReportQuoteName__c</fullName>
        <formula>PrimaryQuoteLine__r.SBQQ__Quote__r.Name</formula>
        <label>Follow Up Report Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FollowupReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Follow-up Report</label>
        <referenceTo>FollowUpReport__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketInfoBOCompetitorDistributor__c</fullName>
        <formula>&apos;Drill into record or generate document.&apos;</formula>
        <label>Market Info BO Competitor Distributor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoBOCompetitorProduct__c</fullName>
        <formula>MarketInfoBo__r.CompetitorProduct__c</formula>
        <label>Market Info BO Competitor Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoBOQuoteName__c</fullName>
        <formula>MarketInfoBo__r.QuoteLine__r.SBQQ__Quote__r.Name</formula>
        <label>Market Info BO Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoBoCompetitorProducer__c</fullName>
        <formula>MarketInfoBo__r.Competitor_Producer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Info Bo Competitor Producer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoBo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market Info BO</label>
        <referenceTo>MarketInfoBO__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarketBGClassification__c</fullName>
        <formula>MarketInfoMarket__r.BusinessGroupClassification__r.Name</formula>
        <label>Market Info Market BG Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarketCompetitorDistributor__c</fullName>
        <formula>&apos;Drill into record or generate document.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Info Market Competitor Distr.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarketCompetitorProducer__c</fullName>
        <formula>MarketInfoMarket__r.Competitor_Producer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Info Market Competitor Producer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarketCompetitorProduct__c</fullName>
        <formula>MarketInfoMarket__r.CompetitorProduct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Info Market Competitor Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarketProduct__c</fullName>
        <formula>MarketInfoMarket__r.Product__r.Name</formula>
        <label>Market Info Market Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketInfoMarket__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Market Info Market</label>
        <referenceTo>MarketInfoMarket__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityAmountNoDec__c</fullName>
        <formula>Opportunity__r.AmountNoDec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Potential Annual Turnover</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityApplication__c</fullName>
        <formula>Opportunity__r.Application__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCloseDate__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityExpectedRevenueNoDec__c</fullName>
        <formula>Opportunity__r.ExpectedRevenueNoDec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityKeyOpportunity__c</fullName>
        <formula>Opportunity__r.Key_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Key Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityStage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <formula>Opportunity__r.BO_Type_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity BO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryQuoteLine__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Lookup to the Primary Quote Line</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryQuote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrincipalName__c</fullName>
        <formula>PrimaryQuoteLine__r.PrincipalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>PrimaryQuoteLine__r.ProductDisplay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPrice__c</fullName>
        <formula>TEXT(CurrencyIsoCode) + &apos; &apos; + PrimaryQuoteLine__r.PricePerUOMwithUOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteName__c</fullName>
        <formula>PrimaryQuoteLine__r.SBQQ__Quote__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SummaryReport__c</fullName>
        <label>Summary Report</label>
        <referenceTo>SummaryReport__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>SummaryReportLInes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitReportDate__c</fullName>
        <formula>IF ( 
				NOT ( ISBLANK ( VisitReport__c ) )
				, VisitReport__r.Visit_Date__c
				, IF ( 
								NOT ( ISBLANK ( VisitReportOpportunity__c ) )
								, VisitReportOpportunity__r.VisitDate__c
								, null
				)
)</formula>
        <label>Visit Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitReportOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report</label>
        <referenceTo>VisitReportOppty__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>Summary_Report_LInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitReportSubject__c</fullName>
        <formula>IF ( 
				NOT ( ISBLANK ( VisitReport__c ) )
				, VisitReport__r.Subject__c
				, IF ( 
								NOT ( ISBLANK ( VisitReportOpportunity__c ) )
								, VisitReportOpportunity__r.VisitReport__r.Subject__c
								, &apos;&apos;
				)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Report Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitReportType__c</fullName>
        <formula>IF ( 
				NOT ( ISBLANK ( VisitReport__c ) )
				, TEXT ( VisitReport__r.Type__c )
				, IF ( 
								NOT ( ISBLANK ( VisitReportOpportunity__c ) )
								, TEXT ( VisitReportOpportunity__r.VisitReport__r.Type__c )
								, &apos;&apos;
				)
)</formula>
        <label>Visit Report Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Report (Unrelated)</label>
        <referenceTo>VisitReport__c</referenceTo>
        <relationshipLabel>Summary Report LInes</relationshipLabel>
        <relationshipName>Summary_Report_LInes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Summary Report Line</label>
    <nameField>
        <displayFormat>PRL-{00000000}</displayFormat>
        <label>Report Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Report LInes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>